# atomic

./: .dockerignore  .gitignore  CHANGELOG.md  cloud.dockerfile  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: cloud-image.yml  test.yml
crates/atomic-cloud/: Cargo.toml  DEPLOY.md  README.md  TESTING.md
crates/atomic-cloud/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
crates/atomic-cloud/frontend/src/: App.tsx  main.tsx
crates/atomic-cloud/frontend/src/components/: CheckEmail.tsx  NodeGraphBackdrop.tsx  SiteFooter.tsx  SiteNav.tsx
crates/atomic-cloud/frontend/src/components/account/: AccountNav.tsx  AccountTopbar.tsx  BillingBanner.tsx  ByokForm.test.tsx  ByokForm.tsx  HoldScreen.tsx  ManagedModels.tsx  UsageMeter.tsx
crates/atomic-cloud/frontend/src/components/ui/: Banner.tsx  Button.tsx  Card.tsx  Field.tsx  Logo.tsx  PasswordField.tsx  SegmentedControl.tsx  Select.tsx  Spinner.tsx  StatusPill.tsx  TextLink.tsx  index.ts
crates/atomic-cloud/frontend/src/layouts/: AuthLayout.tsx  PublicLayout.tsx
crates/atomic-cloud/frontend/src/lib/: accountContext.ts  api.ts  billing.test.ts  billing.ts  cn.ts  format.test.ts  format.ts  host.ts  links.ts  models.ts  provider.ts  useOverview.test.tsx  useOverview.ts  useProviderStatus.ts  validate.ts
crates/atomic-cloud/frontend/src/pages/: Admin.tsx  Landing.tsx  Legal.tsx  Login.test.tsx  Login.tsx  NotFound.tsx  Signup.test.tsx  Signup.tsx
crates/atomic-cloud/frontend/src/pages/account/: AccountShell.tsx  Billing.tsx  Danger.test.tsx  Danger.tsx  Mcp.tsx  Overview.tsx  Provider.tsx  deletionError.ts
crates/atomic-cloud/frontend/src/styles/: global.css
crates/atomic-cloud/frontend/src/test/: fixtures.ts
crates/atomic-cloud/migrations/: 001_control_plane.sql  002_magic_links.sql  003_subdomain_reservation_age.sql  004_provider_credentials.sql  005_provider_generation.sql  006_dispatch_hints.sql  007_provider_backpressure.sql  008_migration_tracking.sql  009_deploy_runs.sql  010_plans_billing.sql  011_webhook_idempotency.sql  012_trials.sql  013_storage_enforcement.sql  014_oauth.sql  015_backups.sql  016_backup_run_status.sql  017_plan_launch_values.sql  018_premium_models_flag.sql
crates/atomic-cloud/src/: account_cache.rs  account_plane.rs  auth.rs  backpressure.rs  backup.rs  backup_store.rs  backups.rs  billing.rs  billing_guard.rs  billing_routes.rs  chat_streams.rs  control_plane.rs  curated_models.rs  demo_plane.rs  deploy.rs  dispatch_hints.rs  dispatcher.rs  email.rs  error.rs  fleet_migration.rs  keyvault.rs  lib.rs  magic_links.rs  main.rs  managed_keys.rs  oauth_routes.rs  oauth_store.rs  plans.rs  pools.rs  provider_config.rs  provider_credentials.rs  provision.rs  provisioning_api.rs  quota.rs  quota_usage.rs  rate_limit.rs  reaper.rs  reserved_subdomains.rs  server.rs  spa.rs  (+2 more)
crates/atomic-cloud/src/billing/: dunning.rs
crates/atomic-cloud/tests/: account_cache.rs  account_plane.rs  backpressure.rs  backup.rs  cloud_auth.rs  control_plane.rs  demo_plane_e2e.rs  deploy_gating.rs  dispatch_hints.rs  dispatcher.rs  e2e_backup.rs  e2e_billing.rs  e2e_cloud.rs  e2e_deploy.rs  e2e_dispatcher.rs  e2e_oauth.rs  fleet_migration.rs  magic_links.rs  managed_keys.rs  migration_lint.rs  model_catalogue_mirror.rs  oauth_store.rs  provider_credentials.rs  provider_routes.rs  provisioning.rs  provisioning_api.rs  quota_billing.rs  reaper.rs  spa_serving.rs  stripe_client.rs  tokens.rs
crates/atomic-cloud/tests/support/: mod.rs
crates/atomic-core/src/: agent.rs  db.rs  embedding.rs  graph_maintenance.rs  lib.rs  manager.rs  pipeline_task.rs  search.rs  settings.rs
crates/atomic-core/src/ingest/: fetch.rs  mod.rs  poller.rs
crates/atomic-core/src/migrate/: mod.rs
crates/atomic-core/src/providers/: error.rs  mod.rs  structured.rs  traits.rs  types.rs
crates/atomic-core/src/reports/: agentic.rs
crates/atomic-core/src/scheduler/: gc.rs  ledger.rs  (+2 more)
crates/atomic-core/tests/: multi_db_tests.rs  pipeline_tests.rs  provider_injection_tests.rs  storage_tests.rs
crates/atomic-server/: Cargo.toml
crates/atomic-server/src/: app.rs  db_extractor.rs  event_channel.rs  lib.rs  main.rs  migration_jobs.rs  state.rs  ws.rs
crates/atomic-server/src/mcp/: mod.rs  server.rs  transport.rs
crates/atomic-server/src/routes/: atoms.rs  chat.rs  dashboard.rs  databases.rs  embedding.rs  exports.rs  feeds.rs  import.rs  ingest.rs  migrations.rs  mod.rs  ollama.rs  reports.rs  settings.rs  utils.rs  wiki.rs
crates/atomic-server/tests/: e2e_app_composition.rs  e2e_atom_pipeline.rs  e2e_auth.rs  e2e_chat.rs  e2e_concurrent.rs  e2e_feeds.rs  e2e_ingest_export.rs  e2e_mcp.rs  e2e_misc.rs  e2e_multi_db.rs  e2e_oauth.rs  e2e_reports.rs  e2e_search.rs  e2e_setup.rs  e2e_tags_settings.rs  e2e_task_runs.rs  e2e_tokens.rs  e2e_websocket.rs  e2e_wiki.rs  migration_scope.rs
crates/atomic-server/tests/support/: mod.rs
crates/atomic-test-support/src/: lib.rs  mock_ai.rs  mock_url.rs  postgres_helpers.rs
deploy/: .env.example  Caddyfile  README.md  caddy.dockerfile  cloud-init.yml  docker-compose.yml
deploy/grafana/: atomic-cloud-dashboard.json
deploy/scripts/: deploy.sh  provision.sh
docs/plans/: atomic-cloud.md  demo-instance.md  durable-task-runs.md
scripts/: cloud-dev.sh  cloud-reset.sh
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/atoms/: AtomReader.tsx
src/components/dashboard/: CaptureOptions.tsx  DashboardView.tsx  DemoIntroCard.tsx
src/components/layout/: DemoBanner.tsx  Layout.tsx  MainView.tsx  TabStrip.tsx
src/components/onboarding/: OnboardingWizard.tsx  StepIndicator.tsx  useOnboardingState.ts
src/components/reports/: FindingReader.tsx  ReportDetailView.tsx  index.ts
src/components/settings/: SettingsModal.tsx
src/components/ui/: CloudDashboardNotice.tsx  index.ts
src/lib/: cloudErrors.ts  pwa.ts
src/lib/stubs/: pwa-register.ts
src/lib/transport/: command-map.ts  http.ts  index.ts  types.ts
src/router/: RouterBridge.tsx  routes.ts
src/stores/: atoms.ts  reports.ts  ui.ts
(+33 files in other folders)
